test/spec_vectors/simd_f64x2_arith/fail/module_2.wat
(module (func (result v128) (f64x2.neg (i64.const 0))))